syntax = "proto3";

package proto;

option java_multiple_files = true;
option java_package = "com.west2.provider.service.proto";
option java_outer_classname = "UserServiceProto";
option objc_class_prefix = "DEMOSRV";

message UserModel {
  string id = 1;
  string username = 2;
  string password = 3;
}

message UserRegisterRequest {
  string username = 1;
  string password = 2;
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  int32 statusCode = 1;
  string statusMsg = 2;
  UserModel user = 3;
}

service UserService {
  rpc userRegister(UserRegisterRequest) returns(UserResponse);
  rpc userLogin(UserLoginRequest) returns(UserResponse);
}


